sample/retrieveUnpackaged/objects/Clerical__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>List of clericals for Customer Verification</description>
    <fields>
        <fullName>Check_Type__c</fullName>
        <inlineHelpText>Must be one of the following values: 
0 - Alert 
1 - Warning 
2 - Informational 
3 - Not Checked</inlineHelpText>
        <label>Check Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cust Verification - Clerical</label>
</CustomObject>